test/tests/stages/6_statements_and_conditional_expressions/valid/ternary_short_circuit.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[34]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(b)
  =
  const int(0)
  ;
  identifier(a)
  ?
  (
  identifier(b)
  =
  const int(1)
  )
  :
  (
  identifier(b)
  =
  const int(2)
  )
  ;
  return
  identifier(b)
  ;
  }
