test/tests/stages/6_statements_and_conditional_expressions/invalid_semantics/ternary_assign.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(2)
  ;
  int
  identifier(b)
  =
  const int(1)
  ;
  identifier(a)
  >
  identifier(b)
  ?
  identifier(a)
  =
  const int(1)
  :
  identifier(a)
  =
  const int(0)
  ;
  return
  identifier(a)
  ;
  }
